--- a/app/src/main/res/layout/activity_add_new_point.xml
+++ b/app/src/main/res/layout/activity_add_new_point.xml
@@ -14,6 +14,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <LinearLayout
+        android:background="@color/cardview_light_background"
+        android:visibility="visible"
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="left"
+        android:layout_marginTop="13dp"
+        android:id="@+id/layout_panel_point"
+        android:orientation="horizontal"
+        android:layout_width="290dp"
+        android:layout_height="40dp">
+
+        <fragment
+            android:background="@android:color/white"
+            android:id="@+id/autocomplete_fragment_point"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+            />
+
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/markerPoint"
         android:layout_width="48dp"
