--- a/app/src/main/res/layout/activity_edit_area.xml
+++ b/app/src/main/res/layout/activity_edit_area.xml
@@ -35,7 +35,7 @@
         android:id="@+id/buttonEditArea"
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:text="Edit Area"
+        android:text="Ubah Data"
         android:textSize="20dp"
         android:background="@color/quantum_bluegrey50"
         app:layout_constraintBottom_toBottomOf="parent"
