--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -60,19 +60,7 @@
             </RelativeLayout>
 
         </fragment>
-        <TextView
-            android:id="@+id/textview_User"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="88dp"
-            android:layout_marginBottom="356dp"
-            android:background="#212121"
-            android:padding="8dp"
-            android:text="User View"
-            android:textColor="#ffffff"
-            android:visibility="invisible" />
+
 
         <TextView
             android:id="@+id/textview_titik"
@@ -84,7 +72,7 @@
             android:layout_marginBottom="286dp"
             android:background="#212121"
             android:padding="8dp"
-            android:text="Tambahkan Titik"
+            android:text="Tambahkan Zona"
             android:textColor="#ffffff"
             android:visibility="invisible" />
 
@@ -98,7 +86,7 @@
             android:layout_marginBottom="216dp"
             android:background="#212121"
             android:padding="8dp"
-            android:text="Tambahkan Marker"
+            android:text="Tambahkan Area"
             android:textColor="#ffffff"
             android:visibility="invisible" />
 
@@ -117,22 +105,7 @@
             android:visibility="invisible" />
 
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab2_User"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="346dp"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:elevation="16dp"
-            android:focusable="true"
-            android:visibility="invisible"
-            app:backgroundTint="#ffffff"
-            app:pressedTranslationZ="12dp"
-            app:srcCompat="@drawable/button_action" />
+
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab2_titik"
