--- a/app/src/main/res/layout/areafragment.xml
+++ b/app/src/main/res/layout/areafragment.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Admin.UI.Activity.ListDataAreaActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerviewArea"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:id="@+id/swipeArea"
+        >
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerviewArea"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+          />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
 
     <ProgressBar
         android:id="@+id/progressBar_circular"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        app:layout_constraintBottom_toBottomOf="@+id/recyclerviewArea"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/recyclerviewArea"
-        app:layout_constraintTop_toTopOf="@+id/recyclerviewArea" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_centerInParent="true"
+       />
+</RelativeLayout>
