--- a/app/src/main/res/layout/activity_firebase_auth.xml
+++ b/app/src/main/res/layout/activity_firebase_auth.xml
@@ -32,22 +32,31 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Contoh Nomer Telepon = +6281393149100"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="phone number"
+        android:text="Nomer Telepon"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.100000024" />
+        app:layout_constraintVertical_bias="0.07999998" />
 
     <EditText
         android:id="@+id/editPhone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="input phone number"
+        android:hint="masukan nomer telepon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +67,7 @@
         android:id="@+id/btnaskcode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ask code verification"
+        android:text="minta kode verifikasi"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +79,7 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="code authentication"
+        android:text="kode verifikasi"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +91,7 @@
         android:id="@+id/editCodeVerification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="input code"
+        android:hint="masukan kode verifikasi"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,7 +102,7 @@
         android:id="@+id/btnVerivy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Verify code"
+        android:text="Verifikasi code"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
