--- a/app/src/main/res/layout/item_view_aman.xml
+++ b/app/src/main/res/layout/item_view_aman.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="100dp"
     android:layout_gravity="center"
     android:layout_marginLeft="19dp"
     android:layout_marginTop="16dp"
@@ -15,53 +15,46 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp">
+        android:layout_height="100dp">
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="No Telepon : "
-            app:layout_constraintBottom_toBottomOf="@+id/phone"
-            app:layout_constraintEnd_toStartOf="@+id/phone"
+            app:layout_constraintBottom_toBottomOf="@+id/phoneAman"
+            app:layout_constraintEnd_toStartOf="@+id/phoneAman"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/phone" />
+            app:layout_constraintTop_toTopOf="@+id/phoneAman" />
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Waktu Masuk: "
-            app:layout_constraintBottom_toBottomOf="@+id/waktu"
-            app:layout_constraintEnd_toStartOf="@+id/waktu"
+            android:text="Waktu Masuk : "
+            app:layout_constraintBottom_toBottomOf="@+id/waktu_aman"
+            app:layout_constraintEnd_toEndOf="@+id/textView7"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/waktu" />
+            app:layout_constraintStart_toStartOf="@+id/textView7"
+            app:layout_constraintTop_toBottomOf="@+id/textView7"
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Area yang dimasuki: "
-            app:layout_constraintBottom_toBottomOf="@+id/area_data"
-            app:layout_constraintEnd_toStartOf="@+id/area_data"
+            android:text="Zona Evakuasi : "
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/textView8"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/area_data" />
+            app:layout_constraintStart_toStartOf="@+id/textView8"
+            app:layout_constraintTop_toBottomOf="@+id/textView8"
+            app:layout_constraintVertical_bias="0.060000002" />
+
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Zona evakuasi terdekat: "
-            app:layout_constraintBottom_toBottomOf="@+id/zona"
-            app:layout_constraintEnd_toStartOf="@+id/zona"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/zona" />
-
-        <TextView
-            android:id="@+id/phone"
+            android:id="@+id/phoneAman"
             android:layout_width="150dp"
             android:layout_height="20dp"
             android:fontFamily="roboto"
@@ -77,46 +70,34 @@
             tools:text="Soekarno" />
 
         <TextView
-            android:id="@+id/area_data"
+            android:id="@+id/zona_evakuasi"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/phone"
+            android:layout_below="@id/phoneAman"
             android:gravity="center_horizontal"
             android:text="sinergi"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/longitude"
-            app:layout_constraintStart_toStartOf="@+id/waktu"
-            app:layout_constraintTop_toBottomOf="@+id/waktu"
-            app:layout_constraintVertical_bias="0.22000003" />
+            app:layout_constraintEnd_toEndOf="@+id/waktu_aman"
+            app:layout_constraintStart_toEndOf="@+id/textView8"
+            app:layout_constraintTop_toTopOf="@+id/textView9"
+            app:layout_constraintVertical_bias="0.050000012" />
 
         <TextView
-            android:id="@+id/waktu"
+            android:id="@+id/waktu_aman"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/phone"
+            android:layout_below="@id/phoneAman"
             android:gravity="center_horizontal"
             android:text="15/11/2019 22:21:23"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/phone"
-            app:layout_constraintStart_toStartOf="@+id/phone"
-            app:layout_constraintTop_toBottomOf="@+id/phone"
+            app:layout_constraintEnd_toEndOf="@+id/phoneAman"
+            app:layout_constraintStart_toStartOf="@+id/phoneAman"
+            app:layout_constraintTop_toBottomOf="@+id/phoneAman"
             app:layout_constraintVertical_bias="0.120000005" />
 
-        <TextView
-            android:id="@+id/zona"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/phone"
-            android:gravity="center_horizontal"
-            android:text="zona 1"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/latitude"
-            app:layout_constraintStart_toStartOf="@+id/area_data"
-            app:layout_constraintTop_toBottomOf="@+id/area_data"
-            app:layout_constraintVertical_bias="0.39" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
