--- a/app/src/main/res/layout/activity_edit_area.xml
+++ b/app/src/main/res/layout/activity_edit_area.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.UI.Activity.EditNamaAreaZonaActivity">
+    tools:context=".Admin.UI.Activity.EditNamaAreaActivity">
 
     <EditText
         android:id="@+id/editNama"
