--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,7 +8,7 @@
         <item
             android:id="@+id/nav_admin"
             android:icon="@drawable/location_item"
-            android:title="Admin View" />
+            android:title="Halaman Admin" />
 
         <item
             android:id="@+id/lihatAreaZona"
