--- a/app/src/main/res/menu/menu_main_admin.xml
+++ b/app/src/main/res/menu/menu_main_admin.xml
@@ -3,7 +3,7 @@
         <item
             android:id="@+id/nav_user"
             android:icon="@drawable/location_item"
-            android:title="User View" />
+            android:title="Halaman Utama" />
 
         <item
             android:id="@+id/nav_list"
@@ -16,12 +16,10 @@
         <item
             android:id="@+id/data_enter_exit"
             android:icon="@drawable/location_item"
-            android:title="Daftar data User" />
+            android:title="Daftar data Notifikasi" />
         <item
             android:id="@+id/logout"
             android:icon="@drawable/location_item"
             android:title="Logout" />
-
-
     </group>
 </menu>
