--- a/app/src/main/res/layout/activity_add_new_point.xml
+++ b/app/src/main/res/layout/activity_add_new_point.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.UI.Activity.AddNewPointActivity">
+    tools:context=".Admin.UI.Activity.AddZonaActivity">
 
     <fragment
         android:id="@+id/map_point"
