--- a/app/src/main/res/menu/menu_main_admin.xml
+++ b/app/src/main/res/menu/menu_main_admin.xml
@@ -17,6 +17,10 @@
             android:id="@+id/data_enter_exit"
             android:icon="@drawable/location_item"
             android:title="Daftar data Notifikasi" />
+       <!-- <item
+            android:id="@+id/setting_notif"
+            android:icon="@drawable/location_item"
+            android:title="Setting Notif" />-->
         <item
             android:id="@+id/logout"
             android:icon="@drawable/location_item"
