--- a/app/src/main/res/layout-land/activity_add_new_map.xml
+++ b/app/src/main/res/layout-land/activity_add_new_map.xml
@@ -9,11 +9,11 @@
     tools:context=".Admin.UI.Activity.AddAreaActivity">
 
     <fragment
-        android:id="@+id/mapsRadius"
-
+        android:id="@+id/maps"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
     <LinearLayout
         android:background="@color/cardview_light_background"
         android:visibility="visible"
@@ -22,20 +22,21 @@
         android:layout_marginTop="13dp"
         android:id="@+id/layout_panel"
         android:orientation="horizontal"
-        android:layout_width="290dp"
+        android:layout_width="630dp"
         android:layout_height="40dp">
 
-    <fragment
-        android:background="@android:color/white"
-        android:id="@+id/autocomplete_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-        />
+        <fragment
+            android:background="@android:color/white"
+            android:id="@+id/autocomplete_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+            />
+
     </LinearLayout>
     <ImageView
-        android:id="@+id/markerEditRadius"
+        android:id="@+id/marker"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_gravity="center"
@@ -44,7 +45,7 @@
         app:srcCompat="@drawable/location_item" />
 
     <LinearLayout
-        android:id="@+id/containerEditRadius"
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
@@ -52,7 +53,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/instructionTitleEditRadius"
+            android:id="@+id/instructionTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
@@ -63,8 +64,10 @@
             android:textSize="18sp"
             tools:text="@string/instruction_where_description" />
 
+
+
         <SeekBar
-            android:id="@+id/radiusBarEditRadius"
+            android:id="@+id/radiusBar"
             style="@style/Widget.AppCompat.SeekBar.Discrete"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -74,7 +77,7 @@
             android:progress="2" />
 
         <TextView
-            android:id="@+id/radiusDescriptionEditRadius"
+            android:id="@+id/radiusDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start|bottom"
@@ -84,8 +87,20 @@
             android:layout_marginBottom="4dp"
             tools:text="100 meters" />
 
+        <EditText
+            android:id="@+id/message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="13dp"
+            android:layout_marginRight="13dp"
+            android:layout_marginBottom="8dp"
+            android:hint="@string/message_hint"
+            android:imeOptions="actionDone"
+            android:inputType="textCapSentences"
+            android:maxLines="1" />
+
         <Button
-            android:id="@+id/nextEditRadius"
+            android:id="@+id/next"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -95,7 +110,7 @@
             android:layout_marginBottom="8dp"
             android:background="@drawable/bg_button"
             android:foreground="?attr/selectableItemBackground"
-            android:text="OK"
+            android:text="@string/continue_description"
             android:textColor="@color/colorAccent" />
 
     </LinearLayout>
