--- a/app/src/main/res/layout/activity_edit_location_point.xml
+++ b/app/src/main/res/layout/activity_edit_location_point.xml
@@ -6,13 +6,35 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.UI.Activity.AddNewPointActivity">
+    tools:context=".Admin.UI.Activity.AddZonaActivity">
 
     <fragment
         android:id="@+id/map_point"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <LinearLayout
+        android:background="@color/cardview_light_background"
+        android:visibility="visible"
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="left"
+        android:layout_marginTop="13dp"
+        android:id="@+id/layout_panel_point"
+        android:orientation="horizontal"
+        android:layout_width="290dp"
+        android:layout_height="40dp">
+
+        <fragment
+            android:background="@android:color/white"
+            android:id="@+id/autocomplete_fragment_point"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+            />
+
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/markerPointEdit"
